[gd_scene load_steps=27 format=3 uid="uid://cjicxnktuy344"]

[ext_resource type="Texture2D" uid="uid://c6e7l2l6hpntn" path="res://assets/sprites/Orange cat-Sheet.png" id="1_d13ck"]
[ext_resource type="Script" uid="uid://5trpx85fkehj" path="res://script/bellist.gd" id="1_kts4y"]
[ext_resource type="Texture2D" uid="uid://bg7ppp368udre" path="res://assets/sprites/sprites/paka's petting sim/Orange cat-Sheet.png" id="2_r40kk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_harxp"]
atlas = ExtResource("2_r40kk")
region = Rect2(0, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8psf"]
atlas = ExtResource("2_r40kk")
region = Rect2(40, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8t3j"]
atlas = ExtResource("2_r40kk")
region = Rect2(0, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kts4y"]
atlas = ExtResource("1_d13ck")
region = Rect2(120, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7707"]
atlas = ExtResource("2_r40kk")
region = Rect2(0, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rn0i"]
atlas = ExtResource("2_r40kk")
region = Rect2(40, 32, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r40kk"]
atlas = ExtResource("1_d13ck")
region = Rect2(0, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqpjt"]
atlas = ExtResource("1_d13ck")
region = Rect2(40, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk527"]
atlas = ExtResource("1_d13ck")
region = Rect2(80, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyyav"]
atlas = ExtResource("1_d13ck")
region = Rect2(120, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndns5"]
atlas = ExtResource("1_d13ck")
region = Rect2(160, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j0yw"]
atlas = ExtResource("1_d13ck")
region = Rect2(200, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmsi3"]
atlas = ExtResource("1_d13ck")
region = Rect2(240, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsjpx"]
atlas = ExtResource("1_d13ck")
region = Rect2(280, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aga6"]
atlas = ExtResource("1_d13ck")
region = Rect2(320, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaixp"]
atlas = ExtResource("1_d13ck")
region = Rect2(360, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5lob"]
atlas = ExtResource("1_d13ck")
region = Rect2(400, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1jjr"]
atlas = ExtResource("1_d13ck")
region = Rect2(440, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqac2"]
atlas = ExtResource("1_d13ck")
region = Rect2(480, 0, 40, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj1au"]
atlas = ExtResource("1_d13ck")
region = Rect2(520, 0, 40, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_harxp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_harxp")
}],
"loop": true,
"name": &"sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8psf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8t3j")
}],
"loop": false,
"name": &"sit_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kts4y")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7707")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rn0i")
}],
"loop": false,
"name": &"stand_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r40kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqpjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk527")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyyav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndns5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j0yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmsi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsjpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aga6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaixp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5lob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1jjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqac2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj1au")
}],
"loop": true,
"name": &"walk",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8psf"]
size = Vector2(23, 17.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r40kk"]
size = Vector2(23, 17)

[node name="Bellist" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_kts4y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-7, 1)
sprite_frames = SubResource("SpriteFrames_harxp")
animation = &"sit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.125)
shape = SubResource("RectangleShape2D_m8psf")

[node name="StateTimer" type="Timer" parent="."]

[node name="ClickArea" type="Area2D" parent="."]

[node name="Clickshape" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_r40kk")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="input_event" from="ClickArea" to="." method="_on_click_area_input_event"]
